# python-project-lvl4

./: Makefile  Procfile  README.md  pyproject.toml  requirements.txt
task_manager/: models.py  settings.py  urls.py  views.py
task_manager/locale/ru/LC_MESSAGES/: django.mo  django.po
task_manager/migrations/: 0001_initial.py  0002_delete_users.py
task_manager/task_manager/: settings.py  urls.py
task_manager/templates/: base.html  index.html  user_create.html  user_delete.html  user_list.html  user_update.html
task_manager/templates/registration/: login.html  signup.html
