[tool.poetry]
name = "hexlet-code"
version = "0.1.12"
description = "task manager"
authors = ["eg-b <yeg.baranov@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
Django = "^3.1.7"
dj-database-url = "^0.5.0"
python-dotenv = "^0.17.0"
gunicorn = "^20.1.0"
flake8 = "^3.9.0"
django-bootstrap4 = "^3.0.0"
bootstrap4 = "^0.1.0"
django-widget-tweaks = "^1.4.8"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
